--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js --watch"
-    
   },
   "keywords": [],
   "author": "",
@@ -15,6 +14,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.12"
+  },
+  "engines": {
+    "node": "10.16.3"
   }
 }
